--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,10 +9,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "6.3.1",
     "expo": "^29.0.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
-    "react-native-design-utility": "^0.0.11",
+    "react-native-design-utility": "^0.0.12",
     "react-navigation": "2.11.2"
   }
 }
