--- a/mobile/app.json
+++ b/mobile/app.json
@@ -22,6 +22,13 @@
       "supportsTablet": true
     },
     "facebookAppId": "240536953465222",
-    "facebookScheme": "fb240536953465222"
+    "facebookScheme": "fb240536953465222",
+    "facebookDisplayName": "InStore",
+    "extra": {
+      "googleAppId": {
+        "ios": "245652154526-oou2jue8h33tm1k637uggto26oajhqb9.apps.googleusercontent.com",
+        "android": "245652154526-21v6mnn51njrfisboec0u21v9jrfmmnh.apps.googleusercontent.com"
+      }
+    }
   }
 }
