--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "express": "4.16.3",
+    "jsonwebtoken": "8.3.0",
     "mongoose": "5.2.8",
     "morgan": "1.9.0",
     "yup": "0.26.2"
