--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,7 +14,8 @@
     "expo": "^29.0.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
-    "react-native-design-utility": "^0.0.14",
-    "react-navigation": "2.11.2"
+    "react-native-design-utility": "^0.0.25",
+    "react-navigation": "2.11.2",
+    "wretch": "1.4.1"
   }
 }
