--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
     "react-native-design-utility": "^0.0.28",
+    "react-native-google-autocomplete": "0.1.5",
     "react-navigation": "2.11.2",
     "wretch": "1.4.1"
   },
