--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "6.3.1",
     "expo": "^29.0.0",
+    "lodash.get": "4.4.2",
     "mobx": "4.3.2",
     "mobx-react": "5.2.5",
     "mobx-state-tree": "3.2.2",
